# fast-ebook

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
docs/: api.md  architecture.md  benchmarks.md  threat-model.md
python/fast_ebook/: __init__.py  __init__.pyi  epub.py  epub.pyi
python/fast_ebook/compat/: __init__.py  __init__.pyi  epub.py  epub.pyi
python/fast_ebook/lib_fast_ebook.dylib.dSYM/Contents/: Info.plist
python/fast_ebook/lib_fast_ebook.dylib.dSYM/Contents/Resources/Relocations/aarch64/: lib_fast_ebook.dylib.yml
src/: batch.rs  container.rs  errors.rs  item_type.rs  lib.rs  manifest.rs  markdown.rs  metadata.rs  model.rs  nav.rs  ncx.rs  pybridge.rs  reader.rs  spine.rs  validation.rs  writer.rs
tests/: baseline_w3c_epubcheck.py  conftest.py  fetch_w3c_tests.py  test_batch.py  test_bytesio.py  test_compat.py  test_edge_cases.py  test_epubcheck.py  test_epubcheck_w3c.py  test_items.py  test_metadata.py  test_read.py  test_roundtrip.py  test_security.py  test_toc.py  test_validate.py  test_w3c_conformance.py  test_write.py  w3c_baseline.json
tests/fixtures/: create_edge_cases.py  create_fixtures.py  empty_manifest.epub  minimal_epub2.epub  minimal_epub3.epub  missing_metadata.epub  multi_chapter.epub  nested_toc.epub  no_spine.epub  wrong_mimetype.epub
