[workspace]
members = ["cli"]

[package]
name = "fast-ebook"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust-powered EPUB2/EPUB3 library for Python"

[lib]
name = "_fast_ebook"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"], optional = true }
zip = { version = "8.5", default-features = false, features = ["deflate"] }
roxmltree = "0.20"
rayon = "1.10"

[features]
default = ["python"]
python = ["pyo3"]

[profile.release]
lto = true
strip = true
codegen-units = 1
