[build-system]
requires = ["maturin>=1.12,<2"]
build-backend = "maturin"

[project]
name = "fast-ebook"
version = "0.1.0"
description = "Rust-powered EPUB2/EPUB3 library for Python. Fast reading, writing, validation, and markdown conversion."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing :: Markup",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/arc53/fast-ebook"
Repository = "https://github.com/arc53/fast-ebook"
Issues = "https://github.com/arc53/fast-ebook/issues"

[tool.maturin]
python-source = "python"
module-name = "fast_ebook._fast_ebook"
features = ["python", "pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
