[package]
name = "fast-ebook-cli"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "CLI tool for EPUB inspection and validation"

[[bin]]
name = "fast-ebook"
path = "src/main.rs"

[dependencies]
_fast_ebook = { path = "..", package = "fast-ebook", default-features = false }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
